--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,7 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  margin: 5rem;
+  background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
+  font-family: "Roboto", sans-serif;
+  font-size: 2.5vmin;
+  color: white;
 }
