--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,6 @@
 /* CSS voor de web app */
 .App {
+  display: grid;
+  grid-template-rows: 2fr max-content min-content min-content 1fr;
+  height: 100vh;
   }
