--- a/app/src/Table.css
+++ b/app/src/Table.css
@@ -30,6 +30,10 @@ td {
   border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
 
+.hourItem:hover {
+  cursor: pointer;
+}
+
 .clicked {
-    background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
