More styling + deleted readme template

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,3 +4,9 @@
   grid-template-rows: 2fr max-content min-content min-content 1fr;
   height: 100vh;
   }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
