--- a/app/src/css/App.css
+++ b/app/src/css/App.css
@@ -11,3 +11,8 @@ form {
   flex-direction: column;
   justify-content: space-evenly;
 }
+
+.werkplaatsen {
+  display: grid;
+  grid-auto-flow: column;
+}
