--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -134,10 +134,8 @@ input[type="submit"]:hover {
   width: 27rem;
   font-weight: bold;
   padding: 1.4rem 0rem;
-  border: 0.3rem solid #fff;
+  border: 0.1rem solid #fff;
   position: relative;
-  box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.16),
-    0rem 0.3rem 0.6rem rgba(0, 0, 0, 0.1);
 }
 .bttn:before {
   transition: 0.5s all ease;
@@ -156,4 +154,60 @@ input[type="submit"]:hover {
   left: 0;
   right: 0;
   opacity: 1;
+}
+
+/* form */
+
+.add-form {
+  width: 70rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.form-add-number,
+.form-add-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-add-number {
+  align-items: center;
+}
+
+#bttn {
+  align-self: flex-end;
+}
+
+.ui-input {
+  position: relative;
+  padding: 0;
+  border: 0;
+}
+
+.ui-input input {
+  background: none;
+  padding: 1.6rem 0 1.6rem 0;
+  font-size: 2.4rem;
+  outline: 0;
+  width: 100%;
+  color: #fff;
+  border: 0.1rem solid white;
+}
+
+.ui-input input + label {
+  display: block;
+  padding: 0.8rem 0 0.8rem 0;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+}
+
+input[type="number"] {
+  width: 50%;
+  border: 0.1rem solid white;
+  text-align: center;
+}
+
+.work-option-wrap {
+  display: flex;
+  justify-content: space-between;
 }
