--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -16,14 +16,19 @@ body {
   color: white;
 }
 
-.workPlaces {
-  display: grid;
-  grid-template: 1fr / 1fr 1fr 1fr;
+.werkplaatsen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.workPlaces h2 {
-  grid-column: span 3;
-  text-align: center;
+.work-places {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .work-item {
@@ -32,7 +37,6 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  height: 25rem;
 }
 
 .work-item-image {
