--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -16,6 +16,14 @@ body {
   color: white;
 }
 
+h2 {
+  text-align: center;
+}
+
+section:not(:first-child) {
+  margin-top: 10rem;
+}
+
 .werkplaatsen {
   display: flex;
   flex-direction: column;
@@ -45,7 +53,7 @@ body {
 
 .beheer-links {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -117,13 +125,28 @@ section.the-css-at-table .spacer {
 
 /* buttons */
 
-input[type="submit"] {
-  background: none;
+.link {
+  color: #fff;
+  transition: 0.3s ease all;
+  text-decoration: none;
+  font-size: 1.8rem;
+  letter-spacing: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1rem 1rem;
+  border-bottom: 0.1rem solid #fff;
+  position: relative;
 }
 
-.bttn:hover {
-  color: #e56b5e;
-  cursor: pointer;
+.link:not(:first-child) {
+  margin-left: 10rem;
+}
+
+input[type="submit"] {
+  background: none;
 }
 
 input[type="submit"]:hover {
@@ -147,7 +170,15 @@ input[type="submit"]:hover {
   border: 0.1rem solid #fff;
   position: relative;
 }
-.bttn:before {
+
+.bttn:hover,
+.link:hover {
+  color: #e56b5e;
+  cursor: pointer;
+}
+
+.bttn:before,
+.link:before {
   transition: 0.5s all ease;
   position: absolute;
   top: 0;
@@ -159,7 +190,8 @@ input[type="submit"]:hover {
   background-color: #fff;
   z-index: -2;
 }
-.bttn:hover:before {
+.bttn:hover:before,
+.link:hover:before {
   transition: 0.5s all ease;
   left: 0;
   right: 0;
@@ -182,6 +214,7 @@ input[type="submit"]:hover {
 
 .form-add-number {
   align-items: center;
+  width: 100%;
 }
 
 #bttn {
@@ -192,6 +225,7 @@ input[type="submit"]:hover {
   position: relative;
   padding: 0;
   border: 0;
+  margin-bottom: 2rem;
 }
 
 .ui-input input {
@@ -202,6 +236,7 @@ input[type="submit"]:hover {
   width: 100%;
   color: #fff;
   border: 0.1rem solid white;
+  padding-left: 1rem;
 }
 
 .ui-input input + label {
