changed font with webfont loader

--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -11,7 +11,7 @@ html {
 body {
   margin: 5rem;
   background-color: #e56b5e;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5vmin;
   color: white;
 }
