--- a/client/app/src/css/index.css
+++ b/client/app/src/css/index.css
@@ -215,11 +215,11 @@ input[type="submit"]:hover {
 .form-add-info {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .form-add-number {
   align-items: center;
-  width: 100%;
 }
 
 #bttn {
@@ -260,4 +260,36 @@ input[type="number"] {
 .work-option-wrap {
   display: flex;
   justify-content: space-between;
+}
+
+.flash-info,
+.flash-error {
+  text-transform: uppercase;
+  text-align: center;
+  position: absolute;
+  top: -1rem;
+  left: 0;
+  right: 0;
+  padding: 3rem 0;
+  text-align: center;
+  animation: showFlash 2s 0s 1 ease-in-out forwards;
+}
+
+.flash-error {
+  background-color: rgba(229, 107, 94, 0.8);
+}
+
+.flash-info {
+  background-color: rgba(22, 152, 140, 0.8);
+}
+
+@keyframes showFlash {
+  0%,
+  100% {
+    transform: translateY(-10rem);
+  }
+  20%,
+  70% {
+    transform: translateY(0);
+  }
 }
