--- a/client/app/src/css/index.css
+++ b/client/app/src/css/index.css
@@ -16,8 +16,16 @@ body {
   color: white;
 }
 
-h2 {
-  text-align: center;
+header {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  width: 10rem;
+  height: 10rem;
 }
 
 .error-message {
@@ -58,7 +66,7 @@ section:not(:first-child) {
 
 .beheer-links {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
@@ -144,10 +152,6 @@ section.the-css-at-table .spacer {
   padding: 1rem 1rem;
   border-bottom: 0.1rem solid #fff;
   position: relative;
-}
-
-.link:not(:first-child) {
-  margin-left: 10rem;
 }
 
 input[type="submit"] {
